kubernetes-provisioning/controllers/resources/network/hibernation-allow-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hibernation-allow-ingress-nginx
spec:
  podSelector:
    matchLabels:
      app: "managed-master-hibernation-monitor"
  policyTypes:
   - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cbci
      podSelector:
        matchLabels:
          com.cloudbees.cje.type: cjoc
    - podSelector:
        matchLabels:
          com.cloudbees.cje.type: master
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/instance: ingress-nginx
    ports:
    - port: http
      protocol: TCP
